--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@apollo/react-hooks": "^4.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "apollo-boost": "^0.4.9",
     "dotenv": "^10.0.0",
     "expo": "~40.0.0",
