--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apollo/client": "^3.3.19",
     "@apollo/react-hooks": "^4.0.0",
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/picker": "^1.8.1",
     "apollo-boost": "^0.4.9",
     "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
@@ -36,6 +37,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-picker-select": "^8.0.4",
     "react-native-web": "~0.13.12",
     "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
